# rust-consul-reference

./: .nvim-dap.lua  Cargo.toml  docker-compose.yml
service-a/: Cargo.toml  Dockerfile
service-a/src/: main.rs
service-b/: Cargo.toml  Dockerfile
service-b/src/: main.rs
service-c/: Cargo.toml  Dockerfile  main.rs
service-c/src/: main.rs
