[package]
name = "service-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { versio = "0.12.4", features = ["json"] }
axum = "0.7.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["serde_derive"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
openssl = { version = "0.10.35", features = ["vendored"] }
